# AtiSuTestTask

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
book_service/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
book_service/migrations/: 0001_initial.py  0002_alter_book_publish_year.py  0003_alter_book_publish_year.py  0004_alter_book_options_alter_book_author_and_more.py
book_service/tests/: tests.py
core/: asgi.py  settings.py  urls.py  wsgi.py
